--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/javassist/javassist.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/reflections/reflections-0.9.9-RC1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/Htmlparser/htmlparser-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/Processing/core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
